--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>SECAF - Início</title>
+  <title>SECAF - Clima Detalhado</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
   <header>
@@ -23,72 +22,23 @@
   </div>
 
   <section class="hero-banner">
-    <img src="images/por-do-sol.png" alt="Pôr do Sol" class="banner-img" />
+    <img src="images/por-do-sol.png" alt="Banner" class="banner-img">
     <div class="banner-texto">
       <h1>Consultoria e Assessoria para Agricultura Familiar</h1>
     </div>
   </section>
 
-  <section class="boas-vindas">
-    <h1>Bem-vindo à SECAF</h1>
-    <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
-    <a href="servicos.html">Conheça nossos serviços</a>
-  </section>
-
   <section class="info-agro-clima">
-    <div class="coluna-esquerda">
-      <h2>Preços Atualizados</h2>
-      <table class="tabela-precos">
-        <tr><td><strong>Dólar:</strong></td><td>R$ 5,63</td></tr>
-        <tr><td><strong>Soja:</strong></td><td>R$ 140,50</td></tr>
-        <tr><td><strong>Milho:</strong></td><td>R$ 82,30</td></tr>
-        <tr><td><strong>Boi Gordo:</strong></td><td>R$ 238,75</td></tr>
-        <tr><td><strong>Ovos:</strong></td><td>R$ 16,90 (30 unid)</td></tr>
-        <tr><td><strong>Frango:</strong></td><td>R$ 8,20/kg</td></tr>
-        <tr><td><strong>Leite:</strong></td><td>R$ 3,90/L</td></tr>
-      </table>
+    <div class="coluna-direita" id="clima-detalhado">
+      <h2>Clima Detalhado - Open-Meteo</h2>
+      <div id="info-clima-detalhado">Carregando dados do clima...</div>
     </div>
-
-    <div class="coluna-direita">
-      <h2>Clima Atual - Open-Meteo</h2>
-      <div id="clima-info">Carregando clima...</div>
-    </div>
-  </section>
-
-  <section class="noticias-agro">
-    <h2>Notícias sobre Agricultura e Agronegócio</h2>
-    <div id="feed-agro"><p>Carregando notícias...</p></div>
   </section>
 
   <footer class="rodape">
-    <div class="rodape-container">
-      <div class="rodape-coluna">
-        <img src="images/logo.png" alt="Logo SECAF" class="rodape-logo">
-      </div>
-      <div class="rodape-coluna">
-        <h4>Links úteis</h4>
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
-      </div>
-      <div class="rodape-coluna">
-        <h4>Contato</h4>
-        <p><strong>WhatsApp:</strong> (67) 9 9615-0411</p>
-        <p><strong>Email:</strong> hawlysonac@gmail.com</p>
-        <p><strong>Endereço:</strong> Dourados - MS</p>
-      </div>
-    </div>
     <div class="rodape-baixo">
       <p>© 2025 SECAF - Todos os direitos reservados.</p>
       <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-    </div>
-    <div class="rodape-logos">
-      <img src="images/logo-crea.png" alt="CREA-MS">
-      <img src="images/logo-anater.png" alt="ANATER">
-      <img src="images/logo-secaf.png" alt="SECAF">
     </div>
   </footer>
 
@@ -96,38 +46,30 @@
     const diasSemana = ["Domingo", "Segunda-feira", "Terça-feira", "Quarta-feira", "Quinta-feira", "Sexta-feira", "Sábado"];
     const meses = ["janeiro", "fevereiro", "março", "abril", "maio", "junho", "julho", "agosto", "setembro", "outubro", "novembro", "dezembro"];
     const hoje = new Date();
-    document.getElementById('data-atual').textContent = `${diasSemana[hoje.getDay()]}, ${hoje.getDate().toString().padStart(2, '0')} de ${meses[hoje.getMonth()]} de ${hoje.getFullYear()}`;
+    const diaSemana = diasSemana[hoje.getDay()];
+    const dia = hoje.getDate().toString().padStart(2, '0');
+    const mes = meses[hoje.getMonth()];
+    const ano = hoje.getFullYear();
+    document.getElementById('data-atual').textContent = `${diaSemana}, ${dia} de ${mes} de ${ano}`;
 
-    fetch('https://api.open-meteo.com/v1/forecast?latitude=-22.22&longitude=-54.81&daily=rain_sum,et0_fao_evapotranspiration&hourly=temperature_2m&current=temperature_2m,relative_humidity_2m,rain&timezone=America/Sao_Paulo')
+    const climaDetalhadoURL = "https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&daily=rain_sum,precipitation_sum,et0_fao_evapotranspiration,wet_bulb_temperature_2m_mean&hourly=temperature_2m,relative_humidity_2m,precipitation_probability,rain,surface_pressure,evapotranspiration,soil_temperature_0cm,wet_bulb_temperature_2m,dew_point_2m,et0_fao_evapotranspiration,wind_speed_10m,wind_direction_10m&current=temperature_2m,relative_humidity_2m,precipitation,is_day,wind_speed_10m,wind_direction_10m&past_days=92";
+
+    fetch(climaDetalhadoURL)
       .then(res => res.json())
       .then(data => {
         const atual = data.current;
-        const hoje = data.daily;
-        document.getElementById('clima-info').innerHTML = `
-          <p><strong>Temp. Atual:</strong> ${atual.temperature_2m}°C</p>
-          <p><strong>Umidade:</strong> ${atual.relative_humidity_2m}%</p>
-          <p><strong>Chuva (agora):</strong> ${atual.rain} mm</p>
-          <hr>
-          <p><strong>Evapotranspiração (hoje):</strong> ${hoje.et0_fao_evapotranspiration[0]} mm</p>
-          <p><strong>Chuva (hoje):</strong> ${hoje.rain_sum[0]} mm</p>
+        const climaHTML = `
+          <p><strong>🌡️ Temperatura:</strong> ${atual.temperature_2m}°C</p>
+          <p><strong>💦 Umidade:</strong> ${atual.relative_humidity_2m}%</p>
+          <p><strong>🌧️ Precipitação:</strong> ${atual.precipitation} mm</p>
+          <p><strong>💨 Vento:</strong> ${atual.wind_speed_10m} km/h</p>
+          <p><strong>🧭 Direção do Vento:</strong> ${atual.wind_direction_10m}°</p>
+          <p><strong>☀️ Dia:</strong> ${atual.is_day ? "Sim" : "Não"}</p>
         `;
-      });
-
-    axios.get('https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/')
-      .then(res => {
-        const noticias = res.data.items.slice(0, 3);
-        const container = document.getElementById("feed-agro");
-        container.innerHTML = "";
-        noticias.forEach(item => {
-          const div = document.createElement("div");
-          div.className = "noticia-card";
-          div.innerHTML = `
-            <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
-            <p>${item.description.slice(0, 100)}...</p>
-            ${item.thumbnail ? `<img src="${item.thumbnail}" alt="Imagem da notícia">` : ""}
-          `;
-          container.appendChild(div);
-        });
+        document.getElementById("info-clima-detalhado").innerHTML = climaHTML;
+      })
+      .catch(() => {
+        document.getElementById("info-clima-detalhado").innerHTML = "<p>Erro ao carregar clima detalhado.</p>";
       });
   </script>
 </body>
