Index completo com clima detalhado e layout final

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>SECAF - Clima Detalhado</title>
+  <title>SECAF - Início</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+
   <header>
     <img src="images/logo.png" alt="Logo SECAF" class="logo">
     <nav>
@@ -28,17 +30,66 @@
     </div>
   </section>
 
+  <section class="boas-vindas">
+    <h1>Bem-vindo à SECAF</h1>
+    <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
+    <a href="servicos.html">Conheça nossos serviços</a>
+  </section>
+
   <section class="info-agro-clima">
+    <div class="coluna-esquerda">
+      <h2>Preços Atualizados</h2>
+      <table class="tabela-precos">
+        <tr><td><strong>Dólar:</strong></td><td>R$ 5,63</td></tr>
+        <tr><td><strong>Soja:</strong></td><td>R$ 140,50</td></tr>
+        <tr><td><strong>Milho:</strong></td><td>R$ 82,30</td></tr>
+        <tr><td><strong>Boi Gordo:</strong></td><td>R$ 238,75</td></tr>
+        <tr><td><strong>Ovos:</strong></td><td>R$ 16,90 (30 unid)</td></tr>
+        <tr><td><strong>Frango:</strong></td><td>R$ 8,20/kg</td></tr>
+        <tr><td><strong>Leite:</strong></td><td>R$ 3,90/L</td></tr>
+      </table>
+    </div>
+
     <div class="coluna-direita" id="clima-detalhado">
       <h2>Clima Detalhado - Open-Meteo</h2>
       <div id="info-clima-detalhado">Carregando dados do clima...</div>
     </div>
   </section>
 
+  <section class="noticias-agro">
+    <h2>Notícias sobre Agricultura e Agronegócio</h2>
+    <div id="feed-agro"><p>Carregando notícias...</p></div>
+  </section>
+
   <footer class="rodape">
+    <div class="rodape-container">
+      <div class="rodape-coluna">
+        <img src="images/logo.png" alt="Logo SECAF" class="rodape-logo">
+      </div>
+      <div class="rodape-coluna">
+        <h4>Links úteis</h4>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="servicos.html">Serviços</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </div>
+      <div class="rodape-coluna">
+        <h4>Contato</h4>
+        <p><strong>WhatsApp:</strong> (67) 9 9615-0411</p>
+        <p><strong>Email:</strong> hawlysonac@gmail.com</p>
+        <p><strong>Endereço:</strong> Dourados - MS</p>
+      </div>
+    </div>
     <div class="rodape-baixo">
       <p>© 2025 SECAF - Todos os direitos reservados.</p>
       <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
+    </div>
+    <div class="rodape-logos">
+      <img src="images/logo-crea.png" alt="CREA-MS">
+      <img src="images/logo-anater.png" alt="ANATER">
+      <img src="images/logo-secaf.png" alt="SECAF">
     </div>
   </footer>
 
@@ -67,10 +118,25 @@
           <p><strong>☀️ Dia:</strong> ${atual.is_day ? "Sim" : "Não"}</p>
         `;
         document.getElementById("info-clima-detalhado").innerHTML = climaHTML;
-      })
-      .catch(() => {
-        document.getElementById("info-clima-detalhado").innerHTML = "<p>Erro ao carregar clima detalhado.</p>";
+      });
+
+    axios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/")
+      .then(res => {
+        const noticias = res.data.items.slice(0, 3);
+        const container = document.getElementById("feed-agro");
+        container.innerHTML = "";
+        noticias.forEach(item => {
+          const div = document.createElement("div");
+          div.className = "noticia-card";
+          div.innerHTML = `
+            <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
+            <p>${item.description.slice(0, 100)}...</p>
+            ${item.thumbnail ? `<img src="${item.thumbnail}" alt="Imagem da notícia">` : ""}
+          `;
+          container.appendChild(div);
+        });
       });
   </script>
+
 </body>
 </html>
