Adiciona botões flutuantes de WhatsApp e Instagram ao site

--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
         <p><strong>🌧️ Precipitação:</strong> ${atual.precipitation} mm</p>
         <p><strong>💨 Vento:</strong> ${atual.wind_speed_10m} km/h</p>
         <p><strong>🧭 Direção:</strong> ${atual.wind_direction_10m}°</p>
-        <hr>
         <p><strong>☀️ É dia?</strong> ${atual.is_day ? "Sim" : "Não"}</p>
         <p><strong>🌱 Evapotranspiração (hoje):</strong> ${hoje.et0_fao_evapotranspiration[0]} mm</p>
         <p><strong>🌧️ Chuva (hoje):</strong> ${hoje.rain_sum[0]} mm</p>
@@ -137,6 +136,16 @@
       });
     });
 </script>
+<!-- Botão flutuante do WhatsApp -->
+<a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
+   class="whatsapp-float" target="_blank">
+  <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" style="width:60px; height:60px;">
+</a>
 
+<!-- Botão flutuante do Instagram -->
+<a href="https://www.instagram.com/SEUUSUARIO" 
+   class="instagram-float" target="_blank">
+  <img src="images/instagram.png" alt="Nosso Instagram" style="width:60px; height:60px;">
+</a>
 </body>
 </html>
