Atualiza página Sobre com rodapé completo e ícones sociais ajustados

--- a/sobre.html
+++ b/sobre.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,54 +7,53 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><img src="images/logo.png" alt="Logo SECAF" class="logo">
-    <nav>
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="servicos.html">Serviços</a>
-      <a href="contato.html">Contato</a>
-    </nav>
-  </header>
-  <main>
-    <h1>Sobre a SECAF</h1>
 
-<p>A SECAF (Serviços de Consultoria e Assessoria para Agricultura Familiar) nasceu em 2007, fruto do sonho de três engenheiros apaixonados pelo campo e comprometidos com o desenvolvimento sustentável da agricultura familiar no Brasil. Com sede em Dourados-MS, a empresa surgiu a partir da necessidade real de levar orientação técnica, planejamento e soluções viáveis para pequenos e médios produtores rurais.</p>
+<header>
+  <img src="images/logo.png" alt="Logo SECAF" class="logo">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="servicos.html">Serviços</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
 
-<p>Ao longo dos anos, a SECAF construiu uma trajetória marcada pela seriedade, responsabilidade e resultados concretos. Nossa equipe multidisciplinar atua com ética e compromisso em todas as fases do desenvolvimento rural, desde o diagnóstico da propriedade até a implantação de projetos financiados por programas públicos e privados.</p>
+<main style="max-width: 1100px; margin: 0 auto; padding: 30px 20px;">
+  <h1>Sobre a SECAF</h1>
+  <p>A SECAF (Serviços de Consultoria e Assessoria para Agricultura Familiar) nasceu em 2007...</p>
+  <p>Ao longo dos anos, a SECAF construiu uma trajetória marcada...</p>
 
-<h2>Nossa História</h2>
+  <h2>Nossa História</h2>
+  <p>Iniciamos com projetos de crédito fundiário e assistência técnica...</p>
+  <ul>
+    <li>Elaboração de projetos técnicos de irrigação e conservação de solo;</li>
+    <li>Vistorias e laudos periciais agrícolas;</li>
+    <li>Regularização ambiental rural e emissão de CAR e CCIR;</li>
+    <li>Análise e interpretação de solo e planos de recuperação de áreas degradadas;</li>
+    <li>Consultoria para Prefeituras em editais, convênios e licitações no setor agro;</li>
+    <li>Elaboração de projetos para obtenção de crédito rural (Pronaf, Pronamp, Moderfrota, etc.);</li>
+    <li>Seguros agrícolas e gestão de riscos no campo.</li>
+  </ul>
 
-<p>Iniciamos com projetos de crédito fundiário e assistência técnica em assentamentos rurais da região sul-mato-grossense. Rapidamente ganhamos notoriedade pela forma personalizada de atender cada produtor, respeitando sua realidade e potencial. Com isso, expandimos nossas atividades para áreas como:</p>
+  <h2>Nossa Missão</h2>
+  <p>Promover o desenvolvimento sustentável da agricultura familiar...</p>
 
-<ul>
-  <li>Elaboração de projetos técnicos de irrigação e conservação de solo;</li>
-  <li>Vistorias e laudos periciais agrícolas;</li>
-  <li>Regularização ambiental rural e emissão de CAR e CCIR;</li>
-  <li>Análise e interpretação de solo e planos de recuperação de áreas degradadas;</li>
-  <li>Consultoria para Prefeituras em editais, convênios e licitações no setor agro;</li>
-  <li>Elaboração de projetos para obtenção de crédito rural (Pronaf, Pronamp, Moderfrota, etc.);</li>
-  <li>Seguros agrícolas e gestão de riscos no campo.</li>
-</ul>
+  <h2>Nossa Visão</h2>
+  <p>Ser referência nacional em consultoria rural...</p>
 
-<h2>Nossa Missão</h2>
-<p>Promover o desenvolvimento sustentável da agricultura familiar com soluções acessíveis, inovadoras e adaptadas à realidade de cada produtor rural.</p>
+  <h2>Nossos Valores</h2>
+  <ul>
+    <li>Compromisso com o produtor rural</li>
+    <li>Ética e transparência</li>
+    <li>Inovação com responsabilidade</li>
+    <li>Valorização da agricultura familiar</li>
+    <li>Respeito ao meio ambiente e às tradições do campo</li>
+  </ul>
 
-<h2>Nossa Visão</h2>
-<p>Ser referência nacional em consultoria rural, reconhecida pela excelência técnica, proximidade com o produtor e impacto positivo no campo.</p>
+  <p>Mais do que uma empresa de consultoria, a SECAF é parceira do homem e da mulher do campo...</p>
+</main>
 
-<h2>Nossos Valores</h2>
-<ul>
-  <li>Compromisso com o produtor rural</li>
-  <li>Ética e transparência</li>
-  <li>Inovação com responsabilidade</li>
-  <li>Valorização da agricultura familiar</li>
-  <li>Respeito ao meio ambiente e às tradições do campo</li>
-</ul>
-
-<p>Mais do que uma empresa de consultoria, a SECAF é parceira do homem e da mulher do campo, ajudando a transformar sonhos em projetos concretos e colheitas em progresso. Caminhamos lado a lado com quem produz com suor, fé e dedicação. Porque acreditamos que o futuro do Brasil começa com quem planta e cuida da terra.</p>
-  </main>
-  <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
-  <!-- Ícones flutuantes das redes sociais -->
+<!-- Ícones flutuantes das redes sociais -->
 <div class="social-float">
   <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
     <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" class="icon-social">
@@ -62,5 +62,38 @@
     <img src="images/instagram.png" alt="Nosso Instagram" class="icon-social">
   </a>
 </div>
+
+<footer class="rodape">
+  <div class="rodape-container">
+    <div class="rodape-coluna">
+      <img src="images/logo.png" alt="Logo SECAF" class="rodape-logo">
+    </div>
+    <div class="rodape-coluna">
+      <h4>Links úteis</h4>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="servicos.html">Serviços</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </div>
+    <div class="rodape-coluna">
+      <h4>Contato</h4>
+      <p><strong>WhatsApp:</strong> (67) 9 9615-0411</p>
+      <p><strong>Email:</strong> hawlysonac@gmail.com</p>
+      <p><strong>Endereço:</strong> Dourados - MS</p>
+    </div>
+  </div>
+  <div class="rodape-baixo">
+    <p>© 2025 SECAF - Todos os direitos reservados.</p>
+    <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
+  </div>
+  <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/logo-secaf.png" alt="SECAF">
+  </div>
+</footer>
+
 </body>
 </html>
