Corrigido rodapé e ícones duplicados na página serviços.html

--- a/servicos.html
+++ b/servicos.html
@@ -31,16 +31,37 @@
         <a href="certificados.html"><button>Certificados e Reconhecimentos</button></a>
     </div>
 </main>
-<footer>
-    <p>&copy; 2025 SECAF - Todos os direitos reservados.</p>
+<footer class="rodape">
+  <div class="rodape-container">
+    <div class="rodape-coluna">
+      <img src="images/logo.png" alt="Logo SECAF" class="rodape-logo">
+    </div>
+    <div class="rodape-coluna">
+      <h4>Links úteis</h4>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="servicos.html">Serviços</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </div>
+    <div class="rodape-coluna">
+      <h4>Contato</h4>
+      <p><strong>WhatsApp:</strong> (67) 9 9615-0411</p>
+      <p><strong>Email:</strong> hawlysonac@gmail.com</p>
+      <p><strong>Endereço:</strong> Dourados - MS</p>
+    </div>
+  </div>
+  <div class="rodape-baixo">
+    <p>© 2025 SECAF - Todos os direitos reservados.</p>
+    <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
+  </div>
+  <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/logo-secaf.png" alt="SECAF">
+  </div>
 </footer>
-<!-- Botão flutuante do WhatsApp -->
-<a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
-   class="whatsapp-float" target="_blank">
-  <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" style="width:60px; height:60px;">
-</a><!-- Botão flutuante do Instagram -->
-<a href="https://www.instagram.com/SEUUSUARIO" class="instagram-float" target="_blank">
-  <img src="images/instagram.png" alt="Nosso Instagram" style="width: 60px; height: 60px;">
 </a><!-- Ícones flutuantes das redes sociais -->
 <div class="social-float">
   <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
