Estilização da página de seguros agrícolas com layout padronizado e cores institucionais

--- a/seguros-agricolas.html
+++ b/seguros-agricolas.html
@@ -16,29 +16,29 @@
             <a href="contato.html">Contato</a>
         </nav>
     </header>
-    <main>
-        <h1>Seguros Agrícolas</h1>
-        <p>O seguro agrícola é uma ferramenta essencial para a proteção da produção rural contra perdas decorrentes de fatores climáticos, pragas, doenças e outros riscos. A SECAF oferece suporte completo na contratação e gestão de seguros agrícolas, garantindo tranquilidade ao produtor.</p>
-        
-        <h2>Tipos de Seguros Agrícolas</h2>
-        <ul>
-            <li><strong>Seguro de Produtividade:</strong> Garante a produção esperada com base em médias históricas ou zoneamento agrícola.</li>
-            <li><strong>Seguro de Faturamento:</strong> Protege a receita financeira esperada considerando produção e preço de mercado.</li>
-            <li><strong>Seguro Paramétrico:</strong> Baseado em parâmetros climáticos (ex: chuvas abaixo de um índice mínimo).</li>
-            <li><strong>Seguro de Custeio:</strong> Cobre os custos de produção como sementes, insumos e tratos culturais.</li>
-            <li><strong>Seguro Pecuário:</strong> Voltado à criação animal, com cobertura para morte por acidente, doenças ou eventos climáticos.</li>
-            <li><strong>Seguro Aquícola:</strong> Protege produções em ambientes aquáticos, como tanques-rede ou viveiros escavados.</li>
-        </ul>
+    <main class="pagina-conteudo">
+  <h1 class="titulo-secao">Seguros Agrícolas</h1>
+  <p>O seguro agrícola é uma ferramenta essencial para a proteção da produção rural contra perdas decorrentes de fatores climáticos, pragas, doenças e outros riscos...</p>
 
-        <h2>Programa de Subvenção ao Prêmio do Seguro Rural (PSR)</h2>
-        <p>O Governo Federal subsidia parte do custo do prêmio do seguro rural, possibilitando maior adesão dos produtores. A SECAF auxilia na solicitação e enquadramento do produtor no PSR.</p>
+  <h2 class="subtitulo-secao">Tipos de Seguros Agrícolas</h2>
+  <ul>
+    <li><strong>Seguro de Produtividade:</strong> Garante a produção esperada com base em médias históricas ou zoneamento agrícola.</li>
+    <li><strong>Seguro de Faturamento:</strong> Protege a receita financeira esperada considerando produção e preço de mercado.</li>
+    <li><strong>Seguro Paramétrico:</strong> Baseado em parâmetros climáticos (ex: chuvas abaixo de um índice mínimo).</li>
+    <li><strong>Seguro de Custeio:</strong> Cobre os custos de produção como sementes, insumos e tratos culturais.</li>
+    <li><strong>Seguro Pecuário:</strong> Voltado à criação animal, com cobertura para morte por acidente, doenças ou eventos climáticos.</li>
+    <li><strong>Seguro Aquícola:</strong> Protege produções em ambientes aquáticos, como tanques-rede ou viveiros escavados.</li>
+  </ul>
 
-        <h2>Como Contratar</h2>
-        <p>A SECAF realiza análise técnica da propriedade e da cultura, elabora simulações de apólices, orienta sobre a seguradora ideal e acompanha todo o processo até a emissão e renovação da apólice.</p>
+  <h2 class="subtitulo-secao">Programa de Subvenção ao Prêmio do Seguro Rural (PSR)</h2>
+  <p>O Governo Federal subsidia parte do custo do prêmio do seguro rural, possibilitando maior adesão dos produtores...</p>
 
-        <h2>Parceiros</h2>
-        <p>Trabalhamos com seguradoras como: <strong>Mapfre, Tokio Marine, Porto, Swiss Re, Essor e Fairfax</strong>, todas com atuação sólida no setor agropecuário.</p>
-    </main>
+  <h2 class="subtitulo-secao">Como Contratar</h2>
+  <p>A SECAF realiza análise técnica da propriedade e da cultura, elabora simulações de apólices...</p>
+
+  <h2 class="subtitulo-secao">Parceiros</h2>
+  <p>Trabalhamos com seguradoras como: <strong>Mapfre, Tokio Marine, Porto, Swiss Re, Essor e Fairfax</strong>...</p>
+</main>
     <footer class="rodape">
   <div class="rodape-container">
     <div class="rodape-coluna">
